        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=14373
        CSS1: selectors (classes and IDs) cannot start with a dash or with a digit

        Make sure the id selector validates against the CSS2.1 identfier
        definition, not the hexcolor/HASH definition.



Canonical link: https://commits.webkit.org/18629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23854 268f45cc-cd09-0410-ab3c-d52691b4dbfc